fix: single sign-on buttons should have middle vertical alignment

--- a/less/style.less
+++ b/less/style.less
@@ -46,7 +46,7 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	list-style-type: none;
 
 	li {
-		vertical-align: top;
+		vertical-align: middle;
 		background: transparent;
 		margin: 0.25em;
 		.pointer;
